vJunos-switch updates

--- a/vjunosswitch/docker/Dockerfile
+++ b/vjunosswitch/docker/Dockerfile
@@ -17,6 +17,15 @@ ARG IMAGE
 COPY $IMAGE* /
 
 COPY *.py /
+COPY *.sh /
+COPY *.conf /
+COPY config.img /
+
+# create config disk to mount
+# run this before then copy config.img to container?
+#RUN ./make-config.sh juniper.conf config.img
+
+#CMD ["/make-config.sh", "juniper.conf", "config.img"]
 
 EXPOSE 22 161/udp 830 5000 10000-10099 57400
 HEALTHCHECK CMD ["/healthcheck.py"]
