adding vJunos-switch final round of tests

--- a/vjunosswitch/docker/Dockerfile
+++ b/vjunosswitch/docker/Dockerfile
@@ -5,6 +5,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get update -qy \
  && apt-get upgrade -qy \
  && apt-get install -y \
+    dosfstools \
     bridge-utils \
     iproute2 \
     python3-ipy \
@@ -12,20 +13,13 @@ RUN apt-get update -qy \
     qemu-kvm \
  && rm -rf /var/lib/apt/lists/*
 
-#COPY vjunosswitch /vjunosswitch
 ARG IMAGE
 COPY $IMAGE* /
-
-COPY *.py /
-COPY *.sh /
+# copy conf file
 COPY *.conf /
-COPY config.img /
-
-# create config disk to mount
-# run this before then copy config.img to container?
-#RUN ./make-config.sh juniper.conf config.img
-
-#CMD ["/make-config.sh", "juniper.conf", "config.img"]
+# copy config shell script
+COPY *.sh /
+COPY *.py /
 
 EXPOSE 22 161/udp 830 5000 10000-10099 57400
 HEALTHCHECK CMD ["/healthcheck.py"]
