--- a/vjunosswitch/docker/juniper.conf
+++ b/vjunosswitch/docker/juniper.conf
@@ -1,5 +1,5 @@
 system {
-    host-name foo;
+    host-name HOST;
     root-authentication {
         plain-text-password-value "admin@123";
     }
@@ -14,6 +14,9 @@ system {
     services {
         ssh {
             root-login allow;
+        }
+        netconf {
+            ssh;                        
         }
     }
 }
